# DumbJared

./: .env  README.md  Taskfile.yaml  Taskfile.yml  compose.common.yaml  compose.dev.yaml  compose.prod.yaml  compose.test.yaml  compose.yaml  docker-compose.dev.yml  docker-compose.yml  nginx.conf  package-lock.json
.github/: CODEOWNERS  codecov.yml  dependabot.yml  labeler.yml  release.yml
.github/workflows/: cd.yaml  ci.yaml  docker-ci.yml  labeler.yaml  lint.yml  playwright.yaml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.dev.sh  entrypoint.prod.sh  pyproject.toml  requirements.txt
backend/api/: admin.py  exceptions.py  forms.py  models.py  querysets.py  serializers.py  tests.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_memberattendance_options.py  0003_alter_game_options_alter_team_options_and_more.py  0004_alter_event_options_alter_game_options_and_more.py  0005_event_join_code_alter_event_quizmaster_and_more.py  0005_event_join_code_event_join_code_six_digits_or_blank.py  0006_rename_round_roundtype.py  0007_remove_vote_unique_vote_rename_round_vote_round_type_and_more.py  0008_question_round_alter_roundtype_options_and_more.py  0009_remove_event_uuid.py  0010_venue_address_alter_venue_url_teamroundsubmission_and_more.py  0011_alter_venue_address.py  0012_eventround_alter_question_options_and_more.py  0013_alter_round_external_id_and_more.py  0014_alter_gametype_name_alter_member_name_and_more.py
backend/api/templates/admin/: create_batch_attendance.html
backend/api/tests/: baker_recipes.py  test_exceptions.py  test_models.py  test_querysets.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py  constants.py  models.py  validators.py
backend/core/management/commands/: db_isready.py  seed_data.py
backend/core/tests/: test_commands.py  test_utils.py  test_validators.py
backend/core/utils/: configuration_guard.py
backend/scraper/: admin.py  exceptions.py  models.py  tasks.py  types.py  views.py
backend/scraper/management/commands/: join_game.py  scrape_data.py
backend/scraper/migrations/: 0001_initial.py  0002_alter_scraperaccount_player_id.py  0003_geocodedaddress.py
backend/scraper/services/: scraper_service.py
backend/scraper/tests/: baker_recipes.py  test_commands.py  test_exceptions.py  test_models.py  test_services.py  test_tasks.py  test_utils.py
backend/scraper/utils/: accounts.py  base_scraper.py  base_url.py  live_scraper.py  sync_tasks.py  timezone.py  trivia_scraper.py
frontend/: Dockerfile  package-lock.json  package.json
frontend-old/Learning/nextjs-dashboard/: pnpm-lock.yaml
frontend-old/trivia-tracker/: package-lock.json  package.json
frontend-old/trivia-tracker/src/app/: globals.css  page.tsx
frontend-old/trivia-tracker/src/app/charts/: page.tsx
frontend-old/trivia-tracker/src/app/glossary/: page.tsx
frontend-old/trivia-tracker/src/app/lib/: Icons.tsx  Navbar.tsx  nav-links.tsx
frontend-old/trivia-tracker/src/app/lib/APIstuff/: API-image.tsx  API-text.tsx
frontend-old/trivia-tracker/src/app/stats/: layout.tsx  page.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/charts/: layout.tsx  page.tsx
frontend/src/app/glossary/: layout.tsx  page.tsx
frontend/src/app/lib/: Icons.tsx  Navbar.tsx  nav-links.tsx
frontend/src/app/stats/: layout.tsx  page.tsx
frontend/trivia-tracker/src/app/glossary/: page.tsx
playwright/: Dockerfile
wrangler/: worker.js  wrangler.jsonc
