[project]
name = "dumbjared-backend"
version = "0.1.0"
description = "Django backend for Dumb Jared that provides a REST API and handles web scraping."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "django>=5.2.10",
    "django-celery-beat>=2.8.1",
    "django-environ>=0.12.0",
    "django-health-check>=3.20.0",
    "django-unfold>=0.75.0",
    "djangorestframework>=3.16.1",
    "fake-useragent>=2.2.0",
    "hiredis>=3.3.0",
    "playwright>=1.57.0",
    "psycopg[binary,pool]>=3.2.10",
    "redis>=7.1.0",
    "requests>=2.32.5",
]

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
addopts = ["--cov-report=term-missing", "--cov=api", "--cov=core", "--cov=scraper"]

[dependency-groups]
dev = [
    "django-browser-reload>=1.21.0",
    "django-watchfiles>=1.4.0",
    "model-bakery>=1.21.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.15.1",
]
prod = [
    "gunicorn>=23.0.0",
]
