[project]
name = "dumbjared-backend"
version = "0.1.0"
description = "Django backend for Dumb Jared that provides a REST API and handles web scraping."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "django>=6.0.6",
    "django-celery-beat>=2.8.1",
    "django-crispy-forms>=2.5",
    "django-environ>=0.12.0",
    "django-health-check>=4.4.2",
    "django-timezone-field>=7.2.2",
    "django-unfold>=0.97.0",
    "djangorestframework>=3.17.1",
    "fake-useragent>=2.2.0",
    "geopy>=2.4.1",
    "hiredis>=3.4.0",
    "playwright>=1.60.0",
    "psycopg[binary,pool]>=3.3.4",
    "pyjwt>=2.13.0",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "tzfpy[tzdata]>=1.3.1",
]


[tool.coverage.run]
omit = ["**/migrations/", "**/tests/", "**/__init__.py"]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
addopts = [
    "--cov-report=term-missing",
    "--cov=api",
    "--cov=core",
    "--cov=scraper",
]
strict = true


[tool.ruff]
extend-exclude = ["**/migrations/", "**/__init__.py"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D105", "D106", "D107"]

[tool.ruff.lint.per-file-ignores]
"**/tests/test_*.py" = ["S101", "SLF001"]
"settings.py" = ["E501"]


[tool.ty.src]
exclude = ["**/migrations/", "**/__init__.py"]


[dependency-groups]
dev = [
    "django-browser-reload>=1.21.0",
    "django-types>=0.24.0",
    "django-watchfiles>=1.4.0",
    "faker>=40.21.0",
    "model-bakery>=1.23.4",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]
prod = ["gunicorn>=26.0.0"]
