[project]
name = "dumbjared-backend"
version = "0.1.0"
description = "Django backend for Dumb Jared that provides a REST API and handles web scraping."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "django>=6.0.7",
    "django-celery-beat>=2.8.1",
    "django-crispy-forms>=2.5",
    "django-environ>=0.14.0",
    "django-health-check>=4.4.3",
    "django-timezone-field>=7.2.2",
    "django-unfold>=0.101.0",
    "djangorestframework>=3.17.1",
    "fake-useragent>=2.2.0",
    "geopy>=2.5.0",
    "hiredis>=3.4.0",
    "playwright>=1.61.0",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "tzfpy[tzdata]>=1.3.2",
]


[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "**/__init__.py",
    "manage.py",
    "config/*",
]
branch = true


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
addopts = ["--cov", "--cov-report=term-missing"]
strict = true


[tool.ruff]
extend-exclude = ["**/migrations/", "**/__init__.py"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D105", "D106", "D107"]

[tool.ruff.lint.per-file-ignores]
"**/tests/test_*.py" = ["S101", "SLF001"]
"settings.py" = ["E501"]


[tool.ty.src]
exclude = ["**/migrations/", "**/__init__.py"]


[dependency-groups]
dev = [
    "django-browser-reload>=1.21.0",
    "django-types>=0.24.0",
    "django-watchfiles>=1.4.0",
    "faker>=40.31.0",
    "model-bakery>=1.24.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]
prod = ["gunicorn>=26.0.0"]
